--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -32,3 +32,19 @@ body {
   padding: 100px;
   width: 500px;
 }
+/* table css */
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:hover {
+  background-color: #ccc;
+}
