--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,28 +3,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href="/">Home</a>
+      <a href="/create">Create Users</a>
     </div>
-    <form class="form-add-new" action="/create-user" method="POST">
-      <fieldset>
-        <legend>Add New User:</legend>
-        <label>Email:</label>
-        <input type="email" name="email" /><br /><br />
-        <label>Name:</label>
-        <input type="text" name="name" /><br /><br />
-        <label>City:</label>
-        <input type="text" name="city" /><br /><br />
-        <button>Save</button>
-      </fieldset>
-    </form>
+    <div>
+      <h2>List Users</h2>
+      <%= JSON.stringify(listUsers)%>
+
+      <table class="table-container">
+        <tr>
+          <th>ID</th>
+          <th>Email</th>
+          <th>Name</th>
+          <th>City</th>
+          <th>Actions</th>
+        </tr>
+        <tr>
+          <td>Peter</td>
+          <td>Griffin</td>
+          <td>$100</td>
+          <td>Hue</td>
+          <td>
+            <button>Edit</button>
+            <button>Delete</button>
+          </td>
+        </tr>
+      </table>
+    </div>
   </body>
 </html>
